v1.5 Cambio del codigo
se mejoro la interfaz del programa y la consulta sobre la version